[package]
name = "raam"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = { version = "1.15.0", features = ["derive"] }
datafusion = "36.0.0"
env_logger = "0.11.3"
glyphon = "0.5.0"
log = "0.4.21"
pollster = "0.3.0"
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
wgpu = "0.19.3"
winit = { version = "0.29.15" } 
